2010-01-18  Till Kamppeter <till.kamppeter@gmail.com>

	* db/source/printer/Lexmark-C780.xml,
	  db/source/printer/Lexmark-C782.xml,
	  db/source/printer/Lexmark-C930.xml,
	  db/source/printer/Lexmark-C935.xml,
	  db/source/printer/Lexmark-X940e.xml,
	  db/source/printer/Lexmark-X945e.xml: Export of all XML files from
	  the MySQL database for testing of BZR writing from the web
	  app. This reformatted some files which got imported via the BZR
	  repository.

2009-12-26  Till Kamppeter <till.kamppeter@gmail.com>

	* README: Added more instructions for the <packages> tags in driver
	  XML files.

2009-12-18  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Lexmark-C510b.xml, printer/Lexmark-C752b.xml: Moved the
	  PPDs of these printers to the new "Postscript-Lexmark-black-only"
	  driver entry in foomatic-db-nonfree as Lexmark did not re-license
	  them.

2009-12-14  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Lexmark-C780.xml, printer/Lexmark-C782.xml,
	  printer/Lexmark-C930.xml, printer/Lexmark-C935.xml,
	  printer/Lexmark-X940e.xml, printer/Lexmark-X945e.xml: Added new
	  entries for Lexmark printers.

	* printer/Lexmark-C510.xml, printer/Lexmark-C520.xml,
	  printer/Lexmark-C522.xml, printer/Lexmark-C524.xml,
	  printer/Lexmark-C750.xml, printer/Lexmark-C752.xml,
	  printer/Lexmark-C910.xml, printer/Lexmark-C912.xml,
	  printer/Lexmark-E350d.xml, printer/Lexmark-E352dn.xml: Updated
	  PPD links in Lexmark's printer XML files.

2009-12-14  Luchee Go <gol@lexmark.com>

	* PPD/Lexmark/Lexmark_C510.ppd,
	PPD/Lexmark/Lexmark_C520.ppd,
	PPD/Lexmark/Lexmark_C522.ppd,
	PPD/Lexmark/Lexmark_C524.ppd,
	PPD/Lexmark/Lexmark_C750.ppd,
	PPD/Lexmark/Lexmark_C752.ppd,
	PPD/Lexmark/Lexmark_C780.ppd,
	PPD/Lexmark/Lexmark_C782.ppd,
	PPD/Lexmark/Lexmark_C910.ppd,
	PPD/Lexmark/Lexmark_C912.ppd,
	PPD/Lexmark/Lexmark_C930.ppd,
	PPD/Lexmark/Lexmark_C935.ppd,
	PPD/Lexmark/Lexmark_E350d.ppd,
	PPD/Lexmark/Lexmark_E352dn.ppd,
	PPD/Lexmark/Lexmark_X940e.ppd,