@@ -666,19 +666,17 @@ things, but the two biggies are the prototype and the printers list
 #   </shortdescription>
 
 # If there are downloadable packages for this driver entry on the
-# OpenPrinting web site, usually packages whose name are the driver's
-# name (in all lowercase, "_" replaced by "-", optionally preceeded by
-# "openprinting-" or "openprinting-ppds-") are considered to belong to
-# this entry. If the package names are different, or if it depends on
-# the version number whether a package belongs to this entry, a
-# <packages> section has to be supplied. It is also required if the
-# driver package is split up into several components, to assign scopes
-# to them. Scopes can be: "general", "gui", "printer", "scanner",
-# "fax", ... Uses the "general" scope if packages are not split. Wild
-# cards are the same as used for file masks in the shell (NOT regular
-# expressions). They must match both Debian and RPM package file
-# names. Note that between file name and version number is a "-" for
-# RPMs and a "_" for Debian packages.
+# OpenPrinting web site, a <packages> section has to be supplied. This
+# tag tells which package files on the OpenPrinting web server belong
+# to this driver or on which external server to find packages for this
+# driver. It also allows assigning files or locations to different
+# components of this driver and to assign scopes to them. Scopes can
+# be: "general", "gui", "printer", "scanner", "fax", ... Uses the
+# "general" scope if packages are not split. Wild cards are the same
+# as used for file masks in the shell (NOT regular expressions). They
+# must match both Debian and RPM package file names. Note that between
+# file name and version number is a "-" for RPMs and a "_" for Debian
+# packages.
 
 #   <packages>
 #    <package scope="general">*splix[_-]1.[0-9].[0-9]*</package>
@@ -708,7 +706,7 @@ things, but the two biggies are the prototype and the printers list
 # systems (RPM and Debian). Use more than one mask if needed. On your
 # server each directory with package files inside must be browsable,
 # so that a client can expand the wildcards. In addition the packages
-# itself need to be readable for everyone so thatthey can get
+# itself need to be readable for everyone so that they can get
 # downloaded.
 
 # Note also that the packages on the external server must be in
