@@ -13,6 +13,9 @@
    and PCL lasers
   </en>
   </shortdescription>
+  <packages>
+    <package scope="general">*gutenprint*</package>
+  </packages>
   <functionality>
     <color />
     <text>90</text>
