@@ -2,6 +2,9 @@
   <name>lm1100</name>
   <url>http://www.openprinting.org/download/printing/lm1100/</url>
   <thirdpartysupplied />
+  <packages>
+    <package scope="general">openprinting-ppds-postscript-ricoh</package>
+  </packages>
   <execution>
     <filter />
     <prototype>gs -q -sDEVICE=ppmraw -r300 %A -dBATCH -dNOPAUSE -dPARANOIDSAFER %Z -sOutputFile=- - | lm1100 %B -</prototype>
