@@ -2,6 +2,9 @@
   <name>min12xxw</name>
   <url>http://www.hinterbergen.de/mala/min12xxw/</url>
   <thirdpartysupplied />
+  <packages>
+    <package scope="general">*min12xxw*</package>
+  </packages>
   <execution>
     <filter />
     <prototype>gs -q -dNOPAUSE -dPARANOIDSAFER -dBATCH -sDEVICE=pbmraw%A%Z -sOutputFile=- - | min12xxw%B</prototype>
