@@ -1,3 +1,14 @@
+2010-02-01  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* driver/gutenprint.xml, driver/lm1100.xml, driver/min12xxw.xml:
+	  Added "<packages>" tags for all drivers for which LSB-based binary
+	  packages are provided. The new OpenPrinting web site needs these
+	  tags.
+
+	* README: Updated the documentation for the <packages> tags
+	  telling that they are now required if binary packages of the
+	  driver are are provided.
+
 2010-01-18  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* db/source/printer/Lexmark-C780.xml,
